--- a/analyses/an_tools.ipynb
+++ b/analyses/an_tools.ipynb
@@ -2,70 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 78,
    "id": "03f0f937",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.metrics import roc_auc_score"
+    "import sys\n",
+    "import os\n",
+    "root_dir = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "if root_dir not in sys.path:\n",
+    "    sys.path.insert(0, root_dir)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5fcd7539",
+   "execution_count": 79,
+   "id": "be61079a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../data_curation/dataset_unique.xlsx',sheet_name=0)"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from utils.imputer import Selective_Imputer\n",
+    "\n",
+    "df = pd.read_excel('../data_curation/dataset_unique.xlsx', sheet_name=0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0627a675",
+   "execution_count": 80,
+   "id": "5fcd7539",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Input contains NaN.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     15\u001b[39m auc_as = roc_auc_score(true_as, alvarado)\n\u001b[32m     16\u001b[39m auc_pas = roc_auc_score(true_pas, pas)\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m auc_usg= \u001b[43mroc_auc_score\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrue_usg\u001b[49m\u001b[43m,\u001b[49m\u001b[43musg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mAUCROC of Alvarado Score: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mauc_as\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m     20\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mAUCROC of Paediatric Appendicitis Score (PAS): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mauc_pas\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Python/Dharma-AppendicitisModel/.venv/lib/python3.13/site-packages/sklearn/utils/_param_validation.py:216\u001b[39m, in \u001b[36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    210\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    211\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[32m    212\u001b[39m         skip_parameter_validation=(\n\u001b[32m    213\u001b[39m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[32m    214\u001b[39m         )\n\u001b[32m    215\u001b[39m     ):\n\u001b[32m--> \u001b[39m\u001b[32m216\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    217\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    218\u001b[39m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[32m    219\u001b[39m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[32m    220\u001b[39m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[32m    221\u001b[39m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[32m    222\u001b[39m     msg = re.sub(\n\u001b[32m    223\u001b[39m         \u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mparameter of \u001b[39m\u001b[33m\\\u001b[39m\u001b[33mw+ must be\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    224\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc.\u001b[34m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m must be\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    225\u001b[39m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[32m    226\u001b[39m     )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Python/Dharma-AppendicitisModel/.venv/lib/python3.13/site-packages/sklearn/metrics/_ranking.py:620\u001b[39m, in \u001b[36mroc_auc_score\u001b[39m\u001b[34m(y_true, y_score, average, sample_weight, max_fpr, multi_class, labels)\u001b[39m\n\u001b[32m    618\u001b[39m y_type = type_of_target(y_true, input_name=\u001b[33m\"\u001b[39m\u001b[33my_true\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    619\u001b[39m y_true = check_array(y_true, ensure_2d=\u001b[38;5;28;01mFalse\u001b[39;00m, dtype=\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m620\u001b[39m y_score = \u001b[43mcheck_array\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_score\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mensure_2d\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m    622\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m y_type == \u001b[33m\"\u001b[39m\u001b[33mmulticlass\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m    623\u001b[39m     y_type == \u001b[33m\"\u001b[39m\u001b[33mbinary\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m y_score.ndim == \u001b[32m2\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m y_score.shape[\u001b[32m1\u001b[39m] > \u001b[32m2\u001b[39m\n\u001b[32m    624\u001b[39m ):\n\u001b[32m    625\u001b[39m     \u001b[38;5;66;03m# do not support partial ROC computation for multiclass\u001b[39;00m\n\u001b[32m    626\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m max_fpr \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m max_fpr != \u001b[32m1.0\u001b[39m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Python/Dharma-AppendicitisModel/.venv/lib/python3.13/site-packages/sklearn/utils/validation.py:1107\u001b[39m, in \u001b[36mcheck_array\u001b[39m\u001b[34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_writeable, force_all_finite, ensure_all_finite, ensure_non_negative, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[39m\n\u001b[32m   1101\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1102\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mFound array with dim \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33m. \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m expected <= 2.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1103\u001b[39m         % (array.ndim, estimator_name)\n\u001b[32m   1104\u001b[39m     )\n\u001b[32m   1106\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m ensure_all_finite:\n\u001b[32m-> \u001b[39m\u001b[32m1107\u001b[39m     \u001b[43m_assert_all_finite\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1108\u001b[39m \u001b[43m        \u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1109\u001b[39m \u001b[43m        \u001b[49m\u001b[43minput_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43minput_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1110\u001b[39m \u001b[43m        \u001b[49m\u001b[43mestimator_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43mestimator_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1111\u001b[39m \u001b[43m        \u001b[49m\u001b[43mallow_nan\u001b[49m\u001b[43m=\u001b[49m\u001b[43mensure_all_finite\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mallow-nan\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m   1112\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m copy:\n\u001b[32m   1115\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m _is_numpy_namespace(xp):\n\u001b[32m   1116\u001b[39m         \u001b[38;5;66;03m# only make a copy if `array` and `array_orig` may share memory`\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Python/Dharma-AppendicitisModel/.venv/lib/python3.13/site-packages/sklearn/utils/validation.py:120\u001b[39m, in \u001b[36m_assert_all_finite\u001b[39m\u001b[34m(X, allow_nan, msg_dtype, estimator_name, input_name)\u001b[39m\n\u001b[32m    117\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m first_pass_isfinite:\n\u001b[32m    118\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m120\u001b[39m \u001b[43m_assert_all_finite_element_wise\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    121\u001b[39m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    122\u001b[39m \u001b[43m    \u001b[49m\u001b[43mxp\u001b[49m\u001b[43m=\u001b[49m\u001b[43mxp\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    123\u001b[39m \u001b[43m    \u001b[49m\u001b[43mallow_nan\u001b[49m\u001b[43m=\u001b[49m\u001b[43mallow_nan\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    124\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmsg_dtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmsg_dtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    125\u001b[39m \u001b[43m    \u001b[49m\u001b[43mestimator_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43mestimator_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    126\u001b[39m \u001b[43m    \u001b[49m\u001b[43minput_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43minput_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    127\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Python/Dharma-AppendicitisModel/.venv/lib/python3.13/site-packages/sklearn/utils/validation.py:169\u001b[39m, in \u001b[36m_assert_all_finite_element_wise\u001b[39m\u001b[34m(X, xp, allow_nan, msg_dtype, estimator_name, input_name)\u001b[39m\n\u001b[32m    152\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m estimator_name \u001b[38;5;129;01mand\u001b[39;00m input_name == \u001b[33m\"\u001b[39m\u001b[33mX\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m has_nan_error:\n\u001b[32m    153\u001b[39m     \u001b[38;5;66;03m# Improve the error message on how to handle missing values in\u001b[39;00m\n\u001b[32m    154\u001b[39m     \u001b[38;5;66;03m# scikit-learn.\u001b[39;00m\n\u001b[32m    155\u001b[39m     msg_err += (\n\u001b[32m    156\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mestimator_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m does not accept missing values\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    157\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m encoded as NaN natively. For supervised learning, you might want\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m    167\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m#estimators-that-handle-nan-values\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    168\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m169\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg_err)\n",
-      "\u001b[31mValueError\u001b[39m: Input contains NaN."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Sex\n",
+      "0 Nausea\n",
+      "1 Loss_of_Appetite\n",
+      "1 Body_Temperature\n",
+      "0 Migratory_Pain\n",
+      "3 Ipsilateral_Rebound_Tenderness\n",
+      "0 Peritonitis\n",
+      "4 WBC_Count\n",
+      "37 Neutrophil_Percentage\n",
+      "99 Ketones_in_Urine\n",
+      "6 CRP\n",
+      "15 Free_Fluids\n",
+      "97 Appendix_Diameter\n",
+      "0 Alvarado_Score\n",
+      "0 Paedriatic_Appendicitis_Score\n",
+      "0 Diagnosis\n",
+      "0 Severity\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "feat_all= df.columns.tolist()\n",
+    "# print(feat_all)\n",
+    "\n",
+    "for col in df[feat_all].columns:\n",
+    "    print (df[col].isna().sum(),col)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "416cf5cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Selective_Imputer.__init__() got an unexpected keyword argument 'col_iter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[81]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m feat_inlammatory= [\u001b[33m'\u001b[39m\u001b[33mBody_Temperature\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mWBC_Count\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mNeutrophil_Percentage\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mCRP\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      2\u001b[39m feat_others= [\u001b[33m'\u001b[39m\u001b[33mIpsilateral_Rebound_Tenderness\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mLoss_of_Appetite\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mKetones_in_Urine\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mFree_Fluids\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m imputer= \u001b[43mSelective_Imputer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcol_iter\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfeat_inlammatory\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcol_knn\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfeat_others\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: Selective_Imputer.__init__() got an unexpected keyword argument 'col_iter'"
+     ]
+    }
+   ],
+   "source": [
+    "feat_inlammatory= ['Body_Temperature', 'WBC_Count', 'Neutrophil_Percentage', 'CRP']\n",
+    "feat_others= ['Ipsilateral_Rebound_Tenderness', 'Loss_of_Appetite', 'Ketones_in_Urine', 'Free_Fluids']\n",
+    "\n",
+    "imputer= Selective_Imputer(col_iter=feat_inlammatory, col_knn=feat_others)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0627a675",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_tools=df[['Alvarado_Score', 'Paedriatic_Appendicitis_Score','Appendix_Diameter','Diagnosis']]\n",
-    "df_as = df_tools.loc[df_tools['Alvarado_Score'].notna(), ['Alvarado_Score', 'Diagnosis']]\n",
-    "df_pas=df_tools.loc[df_tools['Paedriatic_Appendicitis_Score']!=0,['Paedriatic_Appendicitis_Score','Diagnosis']]\n",
-    "# df_usg=df_tools.loc[df_tools['Appendix_Diameter']!=0,['Appendix_Diameter','Diagnosis']]\n",
-    "df_usg=df_tools[['Appendix_Diameter','Diagnosis']]\n",
     "\n",
-    "alvarado = df_as['Alvarado_Score']\n",
-    "pas = df_pas['Paedriatic_Appendicitis_Score']\n",
-    "usg=df_usg['Appendix_Diameter']\n",
     "\n",
-    "true_as=df_as['Diagnosis']\n",
-    "true_pas=df_pas['Diagnosis']\n",
-    "true_usg=df_usg['Diagnosis']\n",
     "\n",
-    "auc_as = roc_auc_score(true_as, alvarado)\n",
-    "auc_pas = roc_auc_score(true_pas, pas)\n",
-    "auc_usg= roc_auc_score(true_usg,usg)\n",
+    "# df_as = df_tools.loc[df_tools['Alvarado_Score'].notna(), ['Alvarado_Score', 'Diagnosis']]\n",
+    "# df_pas=df_tools.loc[df_tools['Paedriatic_Appendicitis_Score'].notna(),['Paedriatic_Appendicitis_Score','Diagnosis']]\n",
+    "# df_usg=df_tools.loc[df_tools['Appendix_Diameter'].notna(),['Appendix_Diameter','Diagnosis']]\n",
+    "# df_usg=df_tools[['Appendix_Diameter','Diagnosis']]\n",
     "\n",
-    "print(f'AUCROC of Alvarado Score: {auc_as:.2f}')\n",
-    "print(f'AUCROC of Paediatric Appendicitis Score (PAS): {auc_pas:.2f}')\n",
-    "print(f'AUCROC of USG: {auc_usg:.2f}')"
+    "# alvarado = df_as['Alvarado_Score']\n",
+    "# pas = df_pas['Paedriatic_Appendicitis_Score']\n",
+    "# usg=df_usg['Appendix_Diameter']\n",
+    "\n",
+    "# true_as=df_as['Diagnosis']\n",
+    "# true_pas=df_pas['Diagnosis']\n",
+    "# true_usg=df_usg['Diagnosis']\n",
+    "\n",
+    "# auc_as = roc_auc_score(true_as, alvarado)\n",
+    "# auc_pas = roc_auc_score(true_pas, pas)\n",
+    "# auc_usg= roc_auc_score(true_usg,usg)\n",
+    "\n",
+    "# print(f'AUCROC of Alvarado Score: {auc_as:.2f}')\n",
+    "# print(f'AUCROC of Paediatric Appendicitis Score (PAS): {auc_pas:.2f}')\n",
+    "# print(f'AUCROC of USG: {auc_usg:.2f}')"
    ]
   },
   {
@@ -73,7 +133,19 @@
    "execution_count": null,
    "id": "b0450616",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df2_only' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[59]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m tools = [\u001b[33m'\u001b[39m\u001b[33mAlvarado_Score\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mPaedriatic_Appendicitis_Score\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mAppendix_Diameter\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mDiagnosis\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdf2_only\u001b[49m.shape)\n\u001b[32m      4\u001b[39m df2_usg = df2_only[df2_only[\u001b[33m'\u001b[39m\u001b[33mAppendix_Diameter\u001b[39m\u001b[33m'\u001b[39m] != \u001b[32m0\u001b[39m]\n",
+      "\u001b[31mNameError\u001b[39m: name 'df2_only' is not defined"
+     ]
+    }
+   ],
    "source": [
     "tools = ['Alvarado_Score','Paedriatic_Appendicitis_Score','Appendix_Diameter','Diagnosis']\n",
     "print(df2_only.shape)\n",
