Dharma_Imputer complete

--- a/data_curation/dharma_dataset.ipynb
+++ b/data_curation/dharma_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_21289/1059972633.py:32: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df1[col]=df1[col].replace(mapping)\n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_21289/1059972633.py:33: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df2[col]=df2[col].replace(mapping)\n"
+     ]
+    }
+   ],
    "source": [
     "df1_col=['Sex','Nausea','Coughing_Pain','Loss_of_Appetite','Body_Temperature','Migratory_Pain','Ipsilateral_Rebound_Tenderness','Peritonitis','WBC_Count','Neutrophil_Percentage','Ketones_in_Urine','CRP','Free_Fluids','Appendix_Diameter','Alvarado_Score','Paedriatic_Appendicitis_Score','Diagnosis','Severity']\n",
     "\n",
@@ -48,12 +59,36 @@
     "    'uncomplicated':0,\n",
     "    'complicated':1,\n",
     "    \n",
-    "}\n"
+    "}\n",
+    "\n",
+    "\n",
+    "df1 = df1.dropna(subset=['Diagnosis'])\n",
+    "df1=df1[df1_col].fillna(-1)\n",
+    "df2=df2[df2_col].fillna(-1)\n",
+    "\n",
+    "\n",
+    "df2.columns=df1_col\n",
+    "for col in df1_col:\n",
+    "    df1[col]=df1[col].replace(mapping)\n",
+    "    df2[col]=df2[col].replace(mapping)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "feat_all=['Nausea','Loss_of_Appetite','Peritonitis','Body_Temperature','WBC_Count','Neutrophil_Percentage','CRP','Ketones_in_Urine','Appendix_Diameter','Free_Fluids','Diagnosis']\n",
+    "df=df1[feat_all].copy().replace(-1,np.nan)\n",
+    "\n",
+    "df.to_excel('dataset_diagnosis.xlsx', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -62,31 +97,9 @@
      "text": [
       "(289, 18)\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_21289/3690891886.py:10: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df1[col]=df1[col].replace(mapping)\n",
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_21289/3690891886.py:11: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df2[col]=df2[col].replace(mapping)\n"
-     ]
     }
    ],
    "source": [
-    "\n",
-    "df1 = df1.dropna(subset=['Diagnosis'])\n",
-    "df1=df1[df1_col].fillna(-1)\n",
-    "df2=df2[df2_col].fillna(-1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "df2.columns=df1_col\n",
-    "\n",
-    "for col in df1_col:\n",
-    "    df1[col]=df1[col].replace(mapping)\n",
-    "    df2[col]=df2[col].replace(mapping)\n",
     "\n",
     "\n",
     "df_combined = pd.concat([df1, df2], ignore_index=True)\n",
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
