scoring systems| test benchmark added

--- a/data_curation/dharma_dataset.ipynb
+++ b/data_curation/dharma_dataset.ipynb
@@ -30,17 +30,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_45137/1059972633.py:32: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_79630/847993460.py:32: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df1[col]=df1[col].replace(mapping)\n",
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_45137/1059972633.py:33: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_79630/847993460.py:33: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df2[col]=df2[col].replace(mapping)\n"
      ]
     }
    ],
    "source": [
-    "df1_col=['Sex','Nausea','Coughing_Pain','Loss_of_Appetite','Body_Temperature','Migratory_Pain','Ipsilateral_Rebound_Tenderness','Peritonitis','WBC_Count','Neutrophil_Percentage','Ketones_in_Urine','CRP','Free_Fluids','Appendix_Diameter','Alvarado_Score','Paedriatic_Appendicitis_Score','Diagnosis','Severity']\n",
+    "df1_col=['Sex','Nausea','Coughing_Pain','Loss_of_Appetite','Lower_Right_Abd_Pain','Body_Temperature','Migratory_Pain','Ipsilateral_Rebound_Tenderness','Peritonitis','WBC_Count','Neutrophil_Percentage','Ketones_in_Urine','CRP','Free_Fluids','Appendix_Diameter','Alvarado_Score','Paedriatic_Appendicitis_Score','Diagnosis','Severity']\n",
     "\n",
-    "df2_col=['Sex','Nausea','CoughingPain','AppetiteLoss','BodyTemp','MigratoryPain','ReboundTenderness','Peritonitis','WBCCount','NeutrophilPerc','KetonesInUrine','CRPEntry','FreeFluids','AppendixDiameter','AlvaradoScore','PediatricAppendicitisScore','DiagnosisByCriteria','AppendicitisComplications']\n",
+    "df2_col=['Sex','Nausea','CoughingPain','AppetiteLoss','LowerAbdominalPainRight','BodyTemp','MigratoryPain','ReboundTenderness','Peritonitis','WBCCount','NeutrophilPerc','KetonesInUrine','CRPEntry','FreeFluids','AppendixDiameter','AlvaradoScore','PediatricAppendicitisScore','DiagnosisByCriteria','AppendicitisComplications']\n",
     "\n",
     "mapping={\n",
     "    'no':0,\n",
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(289, 18)\n"
+      "(289, 19)\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
     "df2_only = pd.DataFrame(list(diff_set), columns=df2.columns)\n",
     "\n",
     "df2_only= df2_only.replace(-1, np.nan)\n",
-    "df2_only.to_excel('dataset_unique.xlsx',index=False)\n",
+    "df2_only.to_excel('dataset_tools.xlsx',index=False)\n",
     "print (df2_only.shape)\n",
     "\n",
     "\n",
@@ -128,20 +128,12 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(650, 18)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_yes=df_combined[df_combined['Diagnosis']==1]\n",
+    "# df_yes=df_combined[df_combined['Diagnosis']==1]\n",
     "\n",
-    "df_yes.to_excel('dataset_comp.xlsx', index=False)\n",
-    "print (df_yes.shape)\n"
+    "# df_yes.to_excel('dataset_complications.xlsx', index=False)\n",
+    "# print (df_yes.shape)\n"
    ]
   }
  ],
