Severity assessment model redevelopment

--- a/data_curation/dharma_dataset.ipynb
+++ b/data_curation/dharma_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,27 +12,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Age', 'BMI', 'Sex', 'Height', 'Weight', 'AlvaradoScore',\n",
+      "       'PediatricAppendicitisScore', 'AppendixOnSono', 'AppendixDiameter',\n",
+      "       'MigratoryPain', 'LowerAbdominalPainRight', 'ReboundTenderness',\n",
+      "       'CoughingPain', 'PsoasSign', 'Nausea', 'AppetiteLoss', 'BodyTemp',\n",
+      "       'WBCCount', 'NeutrophilPerc', 'KetonesInUrine', 'ErythrocytesInUrine',\n",
+      "       'WBCInUrine', 'CRPEntry', 'Dysuria', 'Stool', 'Peritonitis',\n",
+      "       'FreeFluids', 'AppendixWallLayers', 'Kokarde', 'TissuePerfusion',\n",
+      "       'SurroundingTissueReaction', 'PathLymphNodes', 'MesentricLymphadenitis',\n",
+      "       'BowelWallThick', 'Ileus', 'FecalImpaction', 'Meteorism', 'Enteritis',\n",
+      "       'DiagnosisByCriteria', 'TreatmentGroupBinar',\n",
+      "       'AppendicitisComplications'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "df1=pd.read_excel('dataset_780.xlsx',sheet_name=0)\n",
     "df2=pd.read_excel('dataset_430.xlsx')\n",
+    "\n",
+    "df3 = pd.read_csv('external.csv')\n",
+    "\n",
+    "print (df3.columns)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_79630/847993460.py:32: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_95620/2094915708.py:34: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df1[col]=df1[col].replace(mapping)\n",
-      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_79630/847993460.py:33: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/gt/jkhq8fjj7rg_v80lhs4scmh80000gn/T/ipykernel_95620/2094915708.py:35: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df2[col]=df2[col].replace(mapping)\n"
      ]
     }
@@ -41,6 +64,8 @@
     "df1_col=['Sex','Nausea','Coughing_Pain','Loss_of_Appetite','Lower_Right_Abd_Pain','Body_Temperature','Migratory_Pain','Ipsilateral_Rebound_Tenderness','Peritonitis','WBC_Count','Neutrophil_Percentage','Ketones_in_Urine','CRP','Free_Fluids','Appendix_Diameter','Alvarado_Score','Paedriatic_Appendicitis_Score','Diagnosis','Severity']\n",
     "\n",
     "df2_col=['Sex','Nausea','CoughingPain','AppetiteLoss','LowerAbdominalPainRight','BodyTemp','MigratoryPain','ReboundTenderness','Peritonitis','WBCCount','NeutrophilPerc','KetonesInUrine','CRPEntry','FreeFluids','AppendixDiameter','AlvaradoScore','PediatricAppendicitisScore','DiagnosisByCriteria','AppendicitisComplications']\n",
+    "\n",
+    "\n",
     "\n",
     "mapping={\n",
     "    'no':0,\n",
@@ -70,12 +95,13 @@
     "df2.columns=df1_col\n",
     "for col in df1_col:\n",
     "    df1[col]=df1[col].replace(mapping)\n",
-    "    df2[col]=df2[col].replace(mapping)\n"
+    "    df2[col]=df2[col].replace(mapping)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -126,22 +152,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Severity\n",
+      "0    490\n",
+      "1    160\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# df_yes=df_combined[df_combined['Diagnosis']==1]\n",
+    "df_yes=df_combined[df_combined['Diagnosis']==1]\n",
     "\n",
-    "# df_yes.to_excel('dataset_complications.xlsx', index=False)\n",
-    "# print (df_yes.shape)\n"
+    "df_yes.to_excel('dataset_complications.xlsx', index=False)\n",
+    "print (df_yes['Severity'].value_counts())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df3_col = ['Nausea','AppetiteLoss','Peritonitis','BodyTemp','WBCCount','NeutrophilPerc','CRPEntry','KetonesInUrine','AppendixDiameter','FreeFluids','DiagnosisByCriteria','AppendicitisComplications']\n",
+    "\n",
+    "# col_model=['Nausea','Loss_of_Appetite','Peritonitis','Body_Temperature','WBC_Count','Neutrophil_Percentage','CRP','Ketones_in_Urine','Appendix_Diameter','Free_Fluids','Diagnosis','Severity']\n",
+    "\n",
+    "# df_external = df3[df3_col]\n",
+    "# df_external.columns=col_model\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# for col in df_external.columns:\n",
+    "#     df_external[col] = df_external[col].replace(mapping)\n",
+    "\n",
+    "\n",
+    "# df_complications = df_external[df_external['Severity']==1]\n",
+    "\n",
+    "# df_complications.to_excel('compli_augment.xlsx',index=False)"
+   ]
   }
  ],
  "metadata": {
