--- a/analyses/missingness.ipynb
+++ b/analyses/missingness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "12e94adf",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1cecf530",
    "metadata": {},
    "outputs": [
@@ -95,8 +95,18 @@
     "    'Missing Count': missing_count,\n",
     "    'Missing Percentage': missing_percent\n",
     "})\n",
-    "print(missing_df)\n"
+    "print(missing_df)\n",
+    "\n",
+    "missing_df.to_excel(\"missing_data_analysis.xlsx\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38729d69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
